<resources>
    <string name="app_name">ICICI Pocket Banker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_summary">Account Summary</string>
    <string name="action_transactions">Transactions</string>
    <string name="action_transfer">Transfer Funds</string>
    <string name="action_locator">ATM/Branch Locator</string>
    <string name="action_analytics">Analytics</string>
    <string name="action_recommendations">Offers</string>
    <string name="action_pocket">Pockets</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="action_settings">Settings</string>
    <string name="payee_name_default">Payee Name</string>
    <string name="payee_short_name_default">Payee Short Name</string>
    <string name="action_pockets_recharge_shop">Pockets-Recharge/Shop</string>

    <string name="google_map_api_key">AIzaSyBhpNcwPsfMt-3Jk4mBSGdn6zGPYUF_vc0</string>
    <string name="branch_atm_detail">Details</string>
    <string name="branch_atm_map">Locator</string>
    <string name="fetching_location">Fetching location...</string>
    <string name="unable_to_fetch_location">Unable to fetch location. Please make sure location services are enabled and try again.</string>
    <string name="go_to_settings">Go To Settings</string>

    <string name="nfc_not_available">NFC is not available on this device</string>
    <string name="nfc_not_enabled">NFC is not enabled. Do you want to enable it?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_payee_via_nfc">Add Payee Via NFC</string>
    <string name="unable_to_add_payee">Unable to add payee</string>
    <string name="payee_added_title">Payee added successfully</string>
    <string name="payee_added_msg">Name: %1$s\nAccount No: %2$s</string>
    <string name="tap_another_device_to_add_payee">Tap another device to add payee</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount (In \u20B9)</string>
    <string name="amount_hint">Enter amount</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="transfer_confirmation_message">Transfer \u20B9%1$s from %2$s to %3$s?</string>
    <string name="transfer_result_message">Funds transferred successfully!\nReference No:%1$s</string>
    <string name="funds_transfer_failed_msg">Funds transfer failed\nPlease try again after some time</string>

    <string name="customer_id">Customer ID</string>
    <string name="password">Password</string>
    <string name="log_in">LOGIN</string>
    <string name="registered_payees">Registered Payees</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description</string>
    <string name="transferring_funds">Transferring funds...</string>
    <string name="type_of_transaction">Type of transaction</string>
    <string name="contact_address">ICICI Bank Limited                         ICICI Phone Banking Center, ICICI Bank Tower, 7th floor,                         Survey no: 115/27, Plot no. 12, Nanakramguda, Serilingampally,                         Hyderabad – 500032.</string>
    <string name="contact_branch_atm">Visit the Help Desk at any Branch or drop us a line at our ATM DropBox. Use the new ATM/Branch Locator in this app</string>
</resources>
