<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="20dp">


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/customer_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/password"
        android:layout_centerHorizontal="true"
        android:hint="@string/customer_id"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/log_in" />
</RelativeLayout>