<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/from"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />

            <Spinner
                android:id="@+id/from_account_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="24dp"
                android:text="@string/to"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/to_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="To name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/to_account_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="To account number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="24dp"
                android:text="@string/amount"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_hint"
                android:inputType="number"
                android:singleLine="true" />

            <Button
                android:id="@+id/transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:background="?attr/selectableItemBackground"
                android:padding="16dp"
                android:text="Transfer"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>